--- a/YellowstonePathology/UI/Login/Receiving/TaskOrderPage.xaml
+++ b/YellowstonePathology/UI/Login/Receiving/TaskOrderPage.xaml
@@ -42,8 +42,10 @@
                         <TextBox Grid.Column="1" Grid.Row="1" Margin="2,2,2,2" Text="{Binding Path=Comment}" TextWrapping="Wrap"/>
 
                         <TextBlock Grid.Column="0" Grid.Row="2" Margin="2,2,2,2" FontWeight="Bold" HorizontalAlignment="Right" IsEnabled="False">Ship To:</TextBlock>
-                        <ComboBox Name="ComboboxShipToFacility" Grid.Column="1" Grid.Row="2" Margin="2,2,2,2" HorizontalAlignment="Stretch" IsEditable="True" ItemsSource="{Binding Path=FacilityCollection, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type UserControl}}}" SelectedValuePath="FacilityId" DisplayMemberPath="FacilityName" IsEnabled="{Binding Path=PropertiesAreEnabled}"
-							SelectedValue="{Binding Path=ShipToFacilityName}" SelectionChanged="ComboboxShipToFacility_SelectionChanged"/>
+                        <ComboBox Name="ComboboxShipToFacility" Grid.Column="1" Grid.Row="2" Margin="2,2,2,2" HorizontalAlignment="Stretch" IsEditable="True" 
+                            ItemsSource="{Binding Path=FacilityCollection, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type UserControl}}}" 
+                            SelectedValuePath="FacilityId" DisplayMemberPath="FacilityName" IsEnabled="{Binding Path=PropertiesAreEnabled}"
+							SelectedValue="{Binding Path=ShipToFacilityId}" SelectionChanged="ComboboxShipToFacility_SelectionChanged"/>
 
                         <TextBlock Grid.Column="0" Grid.Row="3" Margin="2,2,2,2" FontWeight="Bold" HorizontalAlignment="Right" IsEnabled="False">Address 1:</TextBlock>
                         <TextBox Grid.Column="1" Grid.Row="3" Margin="2,2,2,2" Text="{Binding Path=ShipToAddress1}" IsEnabled="{Binding Path=PropertiesAreEnabled}"/>
