--- a/YellowstonePathology/UI/Surgical/PathologistSignoutAuditMessagePage.xaml
+++ b/YellowstonePathology/UI/Surgical/PathologistSignoutAuditMessagePage.xaml
@@ -10,7 +10,7 @@
             <RowDefinition Height="Auto"></RowDefinition>
         </Grid.RowDefinitions>
 
-        <TextBlock Grid.Column="0" Grid.Row="0" Margin="5,5,5,5" HorizontalAlignment="Center" Text="Signout issues to be resolved" />
+        <TextBlock Grid.Column="0" Grid.Row="0" Margin="5,5,5,5" HorizontalAlignment="Center" Text="Signout Messages" />
         <ListBox Grid.Column="0" Grid.Row="1" Margin="5,5,5,5" HorizontalAlignment="Stretch" ItemsSource="{Binding Path=AuditMessages}">
             <ListBox.ItemTemplate>
                 <DataTemplate>
