--- a/YellowstonePathology/UI/EmbeddingDialog.xaml
+++ b/YellowstonePathology/UI/EmbeddingDialog.xaml
@@ -37,9 +37,9 @@
         <StackPanel Orientation="Horizontal" Grid.Column="1" Grid.Row="0" HorizontalAlignment="Right">
             <Button Width="150" Margin="2,2,2,2" Click="ButtonUpdate_Click">Update</Button>
             <ComboBox  Name="ComboBoxProcessorRuns" ItemsSource="{Binding Path=ProcessorRunCollection}" DisplayMemberPath="Name" Margin="2,2,2,2" Width="200"></ComboBox>
-            <ComboBox  Name="ComboBoxProcessorStartHour" ItemsSource="{Binding Path=ProcessorStartHourList}" Margin="2,2,2,2" Width="200"></ComboBox>
+            <TextBox Name="TextBoxProcessorStartTime" Margin="2" Width="120" Text="{Binding Path=ProcessorStartTime, Converter={StaticResource MilitaryDateTimeConverter}}" />
+            <TextBox Name="TextBoxProcessorFixationDuration" Margin="2" Width="120" Text="{Binding Path=ProcessorFixationDuration, Converter={StaticResource MilitaryDateTimeConverter}}" />
         </StackPanel>
-        
 
         <ListView Name="ListViewEmbeddingScans" Grid.Column="0" Grid.Row="1" Margin="2,2,2,2" ItemsSource="{Binding Path=EmbeddingScanCollection}">
             <ListView.View>
@@ -55,7 +55,7 @@
 
         <TabControl Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="2">
             <TabItem Header="On Hold">
-                <ListView Name="ListViewHoldList" Margin="2,2,2,2" ItemsSource="{Binding Path=SpecimenOrderHoldCollection}">
+                <ListView Name="ListViewHoldList" Margin="2,2,2,2" ItemsSource="{Binding Path=AliquotOrderHoldCollection}">
                     <ListView.ContextMenu>
                         <ContextMenu>
                             <MenuItem Tag="{Binding}" Header="Remove Hold" Click="ContextMenuRemoveHold_Click"></MenuItem>
@@ -63,8 +63,8 @@
                     </ListView.ContextMenu>
                     <ListView.View>
                         <GridView>
-                            <GridViewColumn Header="Master Accession" Width="100" DisplayMemberBinding="{Binding Path=MasterAccessionNo}" />
-                            <GridViewColumn Header="Description" Width="500" DisplayMemberBinding="{Binding Path=Description}" />
+                            <GridViewColumn Header="Id" Width="100" DisplayMemberBinding="{Binding Path=AliquotOrderId}" />
+                            <GridViewColumn Header="Status" Width="500" DisplayMemberBinding="{Binding Path=Status}" />
                         </GridView>
                     </ListView.View>
                 </ListView>
