--- a/YellowstonePathology/UI/Gross/PrintBlockPage.xaml
+++ b/YellowstonePathology/UI/Gross/PrintBlockPage.xaml
@@ -64,14 +64,7 @@
                         <TextBlock Grid.Column="0" Grid.Row="0" FontWeight="Bold" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Right">Specimen:</TextBlock>
                         <TextBlock Grid.Column="1" Grid.Row="0" Margin="2,2,2,2" VerticalAlignment="Center" Text="{Binding Path=Element[Description].Value}" HorizontalAlignment="Stretch"></TextBlock>
 
-                        <TextBlock Grid.Column="0" Grid.Row="1" FontWeight="Bold" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Right">Processor Run:</TextBlock>
-                        <TextBlock Grid.Column="1" Grid.Row="1" Margin="2,2,2,2" VerticalAlignment="Center" Text="{Binding Path=Element[ProcessorRun].Value}" 
-                                   HorizontalAlignment="Stretch" Foreground="{Binding Path=ProcessorStartTime, Converter={StaticResource ProcessRunColorConverter}}"></TextBlock>
-
-                        <TextBlock Grid.Column="0" Grid.Row="2" FontWeight="Bold" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Right">Time To Fixation:</TextBlock>
-                        <TextBlock Grid.Column="1" Grid.Row="2" Margin="2,2,2,2" VerticalAlignment="Center" Text="{Binding Path=Element[TimeToFixationString].Value}" HorizontalAlignment="Stretch"></TextBlock>
-                        
-                        <TextBlock Grid.Column="0" Grid.Row="3" FontWeight="Bold" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Right">Fixation Duration:</TextBlock>
+                        <TextBlock Grid.Column="0" Grid.Row="3" FontWeight="Bold" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Right">Expected Fixation Duration:</TextBlock>
                         <TextBlock Grid.Column="1" Grid.Row="3" Margin="2,2,2,2" VerticalAlignment="Center" Text="{Binding Path=Element[FixationDurationString].Value}" HorizontalAlignment="Stretch"></TextBlock>
                         
                         <TextBlock Grid.Column="0" Grid.Row="4" FontWeight="Bold" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Right">Comment:</TextBlock>                        
@@ -110,12 +103,12 @@
 									<RowDefinition Height="40"></RowDefinition>
 								</Grid.RowDefinitions>
 
-								<Border BorderThickness="0,0,0,1" BorderBrush="Black" Grid.Column="0" Grid.Row="0">
-
+                                <Border BorderThickness="0,0,0,1" BorderBrush="Black" Grid.Column="0" Grid.Row="0">
                                     <StackPanel Margin="0,0,0,1" Background="{Binding Path=Element.[StatusDepricated].Value, Converter={StaticResource GrossVerifiedColorConverter}}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
 								</Border>
 								<StackPanel Grid.Column="0" Grid.Row="1" Background="{Binding Path=Element.[BlockColor].Value}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
 									<TextBlock Margin="2" HorizontalAlignment="Stretch" VerticalAlignment="Center" Background="{Binding Path=Element.[BlockColor].Value}" TextAlignment="Center" Text="{Binding Path=Element[Label].Value}" TextWrapping="Wrap" />
+                                    <TextBlock Margin="2" HorizontalAlignment="Stretch" VerticalAlignment="Center" Background="{Binding Path=Element.[BlockColor].Value}" TextAlignment="Center" Text="{Binding Path=Element[Status].Value}" TextWrapping="Wrap" />
                                     <TextBlock Margin="2" HorizontalAlignment="Stretch" VerticalAlignment="Center" Background="{Binding Path=Element.[BlockColor].Value}" TextAlignment="Center" Text="{Binding Path=Element[EmbeddingInstructions].Value}" TextWrapping="Wrap" />
 								</StackPanel>
 							</Grid>
@@ -144,10 +137,10 @@
 				<Button Grid.Row="2" Margin="5" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Content="Delete" Click="ButtonDelete_Click" />
 				<Button Grid.Row="3" Margin="5" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Content="History" Click="ButtonHistory_Click" />
                 <Button Grid.Row="4" Margin="5" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Content="Stains" Click="ButtonStains_Click" />
-                <Button Grid.Row="5" Margin="5" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Content="Processor" Click="ButtonProcessor_Click" />
-				<Button Grid.Row="6" Margin="5" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Content="Next" Click="ButtonNext_Click" />
-                
-			</Grid>
+                <Button Grid.Row="5" Margin="5" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Content="Hold All" Click="ButtonHoldAll_Click" />
+                <Button Grid.Row="6" Margin="5" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Content="Next" Click="ButtonNext_Click" />
+
+            </Grid>
 		</Grid>
 
 		<ContentControl Name="DocumentViewer" Grid.Column="1" Grid.Row="0" />
