--- a/YellowstonePathology/UI/MySql/MySqlMigrationDialog.xaml
+++ b/YellowstonePathology/UI/MySql/MySqlMigrationDialog.xaml
@@ -18,18 +18,22 @@
         <Menu Name="MainMenu" Grid.Column="0" Grid.Row="0" DockPanel.Dock="Top">
             <MenuItem Header="Get Status" Click="MenuItemGetStatus_Click" Margin="5"></MenuItem>
             <MenuItem Header="Create Table" Click="MenuItemCreateTable_Click" Margin="5"></MenuItem>
+            <MenuItem Header="Compare Table to Class" Click="MenuItemCompareTables_Click" Margin="5"></MenuItem>
+            <MenuItem Header="Add Missing Columns" Click="MenuItemAddMissingColumns_Click" Margin="5"></MenuItem>
             <MenuItem Header="Add Transfer Column" Click="MenuItemAddTransferColumn_Click" Margin="5"></MenuItem>
             <MenuItem Header="Add Timestamp Column" Click="MenuItemAddTimestampColumn_Click" Margin="5"></MenuItem>
             <MenuItem Header="Add DBTS Attribute" Click="MenuItemAddDBTS_Click" Margin="5"></MenuItem>
             <MenuItem Header="Load Data" Click="MenuItemLoadData_Click" Margin="5"></MenuItem>
             <MenuItem Header="Synchronize Data" Click="MenuItemSynchronizeData_Click" Margin="5"></MenuItem>
+            <MenuItem Header="Daily Sync" Click="MenuItemDailySync_Click" Margin="5"></MenuItem>
+            <MenuItem Header="Multi Load" Click="MenuItemMultiLoad_Click" Margin="5"></MenuItem>
         </Menu>
 
         <StackPanel Grid.Column="0" Grid.Row="1" Orientation="Horizontal">
             <TextBlock Margin="5">Number of items to query:</TextBlock>
-            <TextBox Name="TextBoxItemsToQuery" Margin="5" Width="25" Text="{Binding Path=NumberOfItemsInQuery}" />
+            <TextBox Name="TextBoxItemsToQuery" Margin="5" Width="45" Text="{Binding Path=NumberOfItemsInQuery}" />
             <TextBlock Margin="5">Number of times to query:</TextBlock>
-            <TextBox Name="TextBoxRepetitionsOfQuery" Margin="5" Width="25" Text="{Binding Path=NumberOfTimesToQuery}" />
+            <TextBox Name="TextBoxRepetitionsOfQuery" Margin="5" Width="45" Text="{Binding Path=NumberOfTimesToQuery}" />
         </StackPanel>
             
         <ListView Name="ListViewMigrationStatus" Grid.Column="0" Grid.Row="2" ItemsSource="{Binding Path=MigrationStatusCollection}" 
@@ -39,10 +43,11 @@
                     <GridViewColumn DisplayMemberBinding="{Binding Path=Name, Mode=OneWay}" Header="Class" Width="280"/>
                     <GridViewColumn DisplayMemberBinding="{Binding Path=TableName, Mode=OneWay}" Header="Table Name" Width="280"/>
                     <GridViewColumn DisplayMemberBinding="{Binding Path=KeyFieldName, Mode=OneWay}" Header="Key Field" Width="150"/>
-                    <GridViewColumn DisplayMemberBinding="{Binding Path=HasTable}" Header="Has MySql Table" Width="100"/>
-                    <GridViewColumn DisplayMemberBinding="{Binding Path=HasTransferredColumn}" Header="Has Transferred Col" Width="130"/>
-                    <GridViewColumn DisplayMemberBinding="{Binding Path=HasTimestampColumn}" Header="Has Timestamp Col" Width="130"/>
-                    <GridViewColumn DisplayMemberBinding="{Binding Path=HasDBTS}" Header="Has DBTS Attribute" Width="130"/>
+                    <GridViewColumn DisplayMemberBinding="{Binding Path=HasTable}" Header="Has MySql Tbl" Width="85"/>
+                    <GridViewColumn DisplayMemberBinding="{Binding Path=HasAllColumns}" Header="Has All Cols" Width="78"/>
+                    <GridViewColumn DisplayMemberBinding="{Binding Path=HasTransferredColumn}" Header="Has Xfer Col" Width="78"/>
+                    <GridViewColumn DisplayMemberBinding="{Binding Path=HasTimestampColumn}" Header="Has Tmstmp Col" Width="92"/>
+                    <GridViewColumn DisplayMemberBinding="{Binding Path=HasDBTS}" Header="Has DBTS Attr" Width="90"/>
                     <GridViewColumn DisplayMemberBinding="{Binding Path=UnLoadedDataCount}" Header="Unmigrated Count" Width="120"/>
                     <GridViewColumn DisplayMemberBinding="{Binding Path=OutOfSyncCount}" Header="Unsynced Count" Width="100"/>
                 </GridView>
@@ -51,7 +56,7 @@
 
         <StackPanel Grid.Column="0" Grid.Row="3" Orientation="Horizontal">
             <TextBlock Margin="5" Text="Status"></TextBlock>
-            <TextBlock Name="TextBlockStatusMessage"  Margin="5" Text="{Binding Path=StatusMessage}" MinHeight="40"></TextBlock>
+            <TextBlock Name="TextBlockStatusMessage"  Margin="5" Text="{Binding Path=StatusMessage}" MinHeight="40" TextWrapping="Wrap"></TextBlock>
         </StackPanel>
 
     </Grid>
