--- a/YellowstonePathology/UI/EmbeddingDialog.xaml
+++ b/YellowstonePathology/UI/EmbeddingDialog.xaml
@@ -96,6 +96,7 @@
                             <GridViewColumn Header="End" Width="150" DisplayMemberBinding="{Binding Path=FixationEndTime}" />
                             <GridViewColumn Header="Duration" Width="120" DisplayMemberBinding="{Binding Path=FixationDurationCalc}" />
                             <GridViewColumn Header="Duration" Width="120" DisplayMemberBinding="{Binding Path=FixationDuration}" />
+                            <GridViewColumn Header="Description" Width="300" DisplayMemberBinding="{Binding Path=Description}" />
                         </GridView>
                     </ListView.View>
                 </ListView>
