multiple marker panels

--- a/YellowstonePathology/UI/Flow/FlowWorkspace.xaml
+++ b/YellowstonePathology/UI/Flow/FlowWorkspace.xaml
@@ -669,10 +669,8 @@
 
                     <StackPanel Orientation="Horizontal" Margin="5" Grid.Column="0" Grid.Row="0">
                       <TextBlock VerticalAlignment="Center" Width="200" Style="{StaticResource GatingTextBlock}" TextAlignment="Right" Margin="2,2,2,2">Marker Panel:</TextBlock>
-                      <ComboBox Name="comboBoxCommonMarkerPanel" Width="150" ItemsSource="{Binding Path=FlowPanelList}" Height="22" Margin="2,2,2,2"
-                        DisplayMemberPath="PanelName" SelectedValuePath="PanelId">
-                      </ComboBox>
-                            <Button Name="ButtonSetCommonMarkerPanel" Height="20" Width="100" Click="ButtonSetMarkerPanel_Click" Margin="2,2,2,2">Add Panel</Button>              
+                            <ComboBox Name="comboBoxCommonMarkerPanel" Width="150" ItemsSource="{Binding Path=FlowPanelList}" Height="22" Margin="2,2,2,2"/>
+                            <Button Name="ButtonSetCommonMarkerPanel" Height="20" Width="100" Click="ButtonAddMarkerPanel_Click" Margin="2,2,2,2">Add Panel</Button>              
                     </StackPanel>
             
                     <ListView Name="listViewCommonMarkers" Grid.Column="0" Grid.Row="1" 
@@ -940,8 +938,7 @@
 
                     <StackPanel Orientation="Horizontal" Margin="5">
                         <TextBlock VerticalAlignment="Center" Width="200" Style="{StaticResource GatingTextBlock}" TextAlignment="Right" Margin="2,2,2,2">Cell Population Of Interest:</TextBlock>
-                        <ComboBox Name="comboBoxCellPopulationOfInterest" Width="150" IsEditable="True" Margin="2,2,2,2"
-                                    Text="{Binding Path=PanelSetOrderLeukemiaLymphoma.CellPopulationOfInterest}" VerticalAlignment="Top" IsEnabled="{Binding Path=IsWorkspaceEnabled}">
+                        <ComboBox Name="comboBoxCellPopulationOfInterest" Width="150" IsEditable="True" Margin="2,2,2,2" VerticalAlignment="Top" IsEnabled="{Binding Path=IsWorkspaceEnabled}">
                             <ComboBoxItem>Abnormal Lymphocytes</ComboBoxItem>
                             <ComboBoxItem>All WBC's</ComboBoxItem>
                             <ComboBoxItem>All Nucleated Cells</ComboBoxItem>
@@ -959,7 +956,7 @@
                         <ComboBox Name="comboBoxMarkerPanel" Width="150" ItemsSource="{Binding Path=FlowPanelList}" Margin="2,2,2,2"
                                           DisplayMemberPath="PanelName" SelectedValuePath="PanelId" IsEnabled="{Binding Path=IsWorkspaceEnabled}">
                         </ComboBox>
-                        <Button Name="ButtonSetMarkerPanel" Height="20" Width="100" Click="ButtonSetMarkerPanel_Click" IsEnabled="{Binding Path=IsWorkspaceEnabled}" Margin="2,2,2,2">Set Marker Panel</Button>
+                        <Button Name="ButtonAddMarkerPanel" Height="20" Width="100" Click="ButtonAddMarkerPanel_Click" IsEnabled="{Binding Path=IsWorkspaceEnabled}" Margin="2,2,2,2">Add Marker Panel</Button>
                         <Button Height="20" Width="100" Click="ButtonRemoveMarker_Click" IsEnabled="{Binding Path=IsWorkspaceEnabled}" Margin="2,2,2,2">Remove Marker</Button>
                     </StackPanel>
                 </StackPanel>
