Nulable bools to match table defs

--- a/YellowstonePathology/UI/MySql/MySqlMigrationDialog.xaml
+++ b/YellowstonePathology/UI/MySql/MySqlMigrationDialog.xaml
@@ -30,7 +30,7 @@
                 <MenuItem Header="Load Data" Click="MenuItemLoadData_Click" Margin="5"></MenuItem>
                 <MenuItem Header="Synchronize Data" Click="MenuItemSynchronizeData_Click" Margin="5"></MenuItem>
             </MenuItem>
-            <MenuItem Header="Compare Selected Data" Click="MenuItemCompareData_Click" Margin="5"></MenuItem>
+            <MenuItem Header="Compare/Update Selected Data" Click="MenuItemCompareData_Click" Margin="5"></MenuItem>
         </Menu>
 
         <StackPanel Grid.Column="0" Grid.Row="1" Orientation="Horizontal">
