--- a/YellowstonePathology/UI/Login/ClientLookupPage.xaml
+++ b/YellowstonePathology/UI/Login/ClientLookupPage.xaml
@@ -34,7 +34,7 @@
                                 <RowDefinition Height="*"></RowDefinition>
                             </Grid.RowDefinitions>
 
-                            <TextBlock Grid.Column="0" Grid.Row="1" Margin="2" FontSize="12" HorizontalAlignment="Center" Text="{Binding Path=ClientName}" />
+                            <TextBlock Grid.Column="0" Grid.Row="1" Margin="2" FontSize="12" HorizontalAlignment="Center" Text="{Binding Path=ClientNameTruncated}" />
                             <TextBlock Grid.Column="0" Grid.Row="2" Margin="2" FontSize="12" HorizontalAlignment="Center" Text="{Binding Path=Location}" />
                         </Grid>
                     </Border>
